:hammer: Fix local font not showing up on safari

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -24,7 +24,7 @@ body {
 body {
   margin: 0;
   padding: 0;
-  font-family: Pretendard;
+  font-family: var(--font-pretendard);
 }
 
 * {
